--- a/css/main.scss
+++ b/css/main.scss
@@ -10,6 +10,11 @@
 	text-decoration: none;
 }
 
+*::selection {
+    color: #000;
+    background: rgb(96, 255, 221);
+}
+
 html {
     scroll-behavior: smooth;
 }
@@ -56,6 +61,7 @@ body {
         }
     }
 }
+
 
 .header {
     display: flex;
@@ -325,7 +331,7 @@ body {
             flex-direction: column;
             position: absolute;
             top: 0;
-            left: -15rem;
+            left: -18rem;
             width: 15rem;
             height: 100%;
             background: linear-gradient(130deg, rgb(69, 255, 94) 15%, rgb(192, 253, 201) 85%);
@@ -335,6 +341,7 @@ body {
             z-index: 6;
             transition: .4s;
             padding: 1rem 0;
+            box-shadow: 3px 0px 20px rgb(133, 133, 133);
 
     
             & .nav-list {
