--- a/css/index/index_main.scss
+++ b/css/index/index_main.scss
@@ -1,10 +1,50 @@
+// ---------------------------------------------------------------
+// ---------------------------------------------------------------
+// -------------------------- Variables --------------------------
+// ---------------------------------------------------------------
+// ---------------------------------------------------------------
+
+
+$blanc: #fff;
+$noir: #000;
+$vert-base: rgb(69, 255, 94);
+$noir-op_0_75: rgba(0, 0, 0, 0.75);
+$bleu-vert-pastel: rgb(230, 255, 230);
+
+//first-menu
+$vert-jaune-op_0_8: rgba(184, 255, 69, 0.8);
+$vert-jaune-blanc-op_0_8: rgba(225, 255, 177, 0.8);
+$vert-jaune: rgb(168, 255, 27);
+$vert-jaune-blanc: rgb(225, 255, 177);
+
+//second-menu
+$vert-op_0_8: rgba(69, 255, 94, 0.8);
+$vert-blanc-op_0_8: rgba(177, 255, 187, 0.8);
+$vert: rgb(28, 255, 58);
+$vert-blanc: rgb(177, 255, 187);
+
+//third-menu
+$vert-bleu-op_0_8: rgba(69, 255, 193, 0.8);
+$vert-bleu-blanc-op_0_8: rgba(176, 255, 229, 0.8);
+$vert-bleu: rgb(30, 255, 180);
+$vert-bleu-blanc: rgb(162, 255, 224);
+
+
+
+// ---------------------------------------------------------------
+// ---------------------------------------------------------------
+// -------------------------- Variables --------------------------
+// ---------------------------------------------------------------
+// ---------------------------------------------------------------
+
+
 .bg-body-1 {
     //  menu
     display: flex;
     height: 50rem;
     max-width: 500rem;
     width: 100%;
-    background: #fff;
+    background: $blanc;
 
     & .global-menu-titre {
         display: flex;
@@ -50,7 +90,7 @@
                         text-align: center;
                         margin-top: 0rem;
                         position: relative;
-                        color: rgba(0, 0, 0, 0.75);
+                        color: $noir-op_0_75;
                     }
                 }
 
@@ -72,7 +112,7 @@
                     & a {
                         font-size: 1.35rem;
                         font-weight: bold;
-                        color: #000;
+                        color: $noir;
                         transition: .5s;
 
                         &:hover {
@@ -86,7 +126,7 @@
                         justify-content: center;
                         width: 7rem;
                         height: 2.5rem;
-                        border: solid 2px rgb(0, 0, 0);
+                        border: solid 2px $noir;
                         border-radius: 15px;
                         
                     }
@@ -95,31 +135,31 @@
             }
             
             & .first-menu {
-                background: linear-gradient(-35deg, rgba(184, 255, 69, 0.8) 40%, rgba(225, 255, 177, 0.8));
+                background: linear-gradient(-35deg, $vert-jaune-op_0_8 40%, $vert-jaune-blanc-op_0_8);
                 
                 & .footer-menu {
-                    background: linear-gradient(45deg, rgb(168, 255, 27), rgb(219, 255, 162) 65%);
+                    background: linear-gradient(45deg, $vert-jaune, $vert-jaune-blanc 65%);
                     
                     & .buton-choisir {
-                        background: rgb(168, 255, 27);
+                        background: $vert-jaune;
                     }
                 }
             }
             
             & .second-menu {
-                background: linear-gradient(-35deg, rgba(69, 255, 94, 0.8) 40%, rgba(177, 255, 187, 0.8));;
+                background: linear-gradient(-35deg, $vert-op_0_8 40%, $vert-blanc-op_0_8);;
                 
                 & .footer-menu {
-                    background: linear-gradient(45deg, rgb(28, 255, 58), rgb(165, 255, 177) 65%);
+                    background: linear-gradient(45deg, $vert, $vert-blanc 65%);
                     
                     & .buton-choisir {
-                        background: rgb(28, 255, 58);
+                        background: $vert;
                     }
                 }
             }
             
             & .third-menu {
-                background: linear-gradient(-35deg, rgba(69, 255, 193, 0.8) 40%, rgba(176, 255, 229, 0.8));;
+                background: linear-gradient(-35deg, $vert-bleu-op_0_8 40%, $vert-bleu-blanc-op_0_8);;
                 
                 & .footer-menu {
                     background: linear-gradient(45deg, rgb(30, 255, 180), rgb(162, 255, 224) 65%);
@@ -139,7 +179,7 @@
     height: 10rem;
     max-width: 500rem;
     width: 100%;
-    background: rgb(230, 255, 230);
+    background: $bleu-pastel;
 
     & .info-livraison-paiement {
         width: 85%;
@@ -170,7 +210,7 @@
     height: 35rem;
     max-width: 500rem;
     width: 100%;
-    background: #fff
+    background: $blanc;
 }
 
 .bg-body-4 {
@@ -199,26 +239,26 @@
         
         & input {
             height: 3rem;
-            border: solid 2px #000;
+            border: solid 2px $noir;
             border-radius: 10px;
             margin: 0 0.75rem;
         }
         & input[type=mail] {
             width: 15rem;
             padding: 0 1rem;
-            color: #000;
-            background: rgb(69, 255, 94);
+            color: $noir;
+            background: $vert-base;
         }
         
         & input[type=submit] {
             width: 5rem;
             color: #000;
-            background: rgb(69, 255, 94);
+            background: $vert-base;
             transition: .4s;
 
             &:hover {
-                color: rgb(69, 255, 94);
-                background: #000;
+                color: $vert-base;
+                background: $noir;
             }
         }
     }
@@ -253,7 +293,7 @@
     .bg-body-2 {
         // Bandeau info livraison/payment
         height: 20rem;
-        background: rgb(230, 255, 230);
+        background: $bleu-vert-pastel;
         
         & .info-livraison-paiement {
             display: grid;
@@ -293,7 +333,7 @@
         height: 25rem;
         max-width: 500rem;
         width: 100%;
-        background: rgb(69, 255, 94);
+        background: $vert-base;
         padding: 0 .5rem;
     
         & .title-mail {
@@ -314,7 +354,7 @@
             justify-content: space-between;
             & input {
                 height: 3rem;
-                border: solid 2px #000;
+                border: solid 2px $noir;
                 border-radius: 10px;
                 margin: 0 0.75rem;
                 margin-top: 3rem;
@@ -323,18 +363,18 @@
                 width: 15rem;
                 padding: 0 1rem;
                 color: #000;
-                background: rgb(69, 255, 94);
+                background: $vert-base;
             }
             
             & input[type=submit] {
                 width: 5rem;
                 color: #000;
-                background: rgb(69, 255, 94);
+                background: $vert-base;
                 transition: .4s;
     
                 &:hover {
-                    color: rgb(69, 255, 94);
-                    background: #000;
+                    color: $vert-base;
+                    background: $noir;
                 }
             }
         }
