--- a/css/index/index_main.scss
+++ b/css/index/index_main.scss
@@ -39,70 +39,74 @@ $vert-bleu-blanc: rgb(162, 255, 224);
 
 
 .bg-body-1 {
-    //  menu
     display: flex;
-    height: 50rem;
-    max-width: 500rem;
-    width: 100%;
-    background: $blanc;
+    justify-content: center;
+    align-items: center;
 
     & .global-menu-titre {
         display: flex;
         flex-direction: column;
-        max-width: 75rem;
-        width: 100%;
-        align-items: center;
         justify-content: center;
-        margin-left: auto;
-        margin-right: auto;
+        align-items: center;
 
         & .titre-global-menu {
-            display: flex;
-            flex-direction: column;
-            margin-bottom: 5rem;
             text-align: center;
-
+            margin: 4rem;
+            
             & h2 {
-                font-size: 2rem;
+                margin-bottom: 1rem;
+                font-size: 2.25rem;
+            }
+            
+            & h3 {
                 margin-bottom: 1rem;
             }
         }
 
         & .global-menu {
             display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 2rem;
+            // max-width: 799px;
 
             & .menu {
                 width: 25rem;
                 height: 30rem;
-                margin: 0 1.5rem;
+                margin: 1rem 1.5rem;
                 border-radius: 0 40px;
-
+                
                 & .titre-menu {
+                    display: flex;
+                    flex-direction: column;
+                    padding: .5rem;
+                    text-align: center;
+                    border-radius: 0 40px 0 0;
 
                     & h4 {
                         font-size: 1.5rem;
-                        text-align: center;
-                        margin-top: .5rem;
-                        position: relative;
                     }
+
                     & h5 {
                         font-size: .8rem;
-                        text-align: center;
-                        margin-top: 0rem;
-                        position: relative;
                         color: $noir-op_0_75;
                     }
                 }
 
+                & .body-menu {
+                    height: 22.3rem;
+                    padding: .5rem;
+                }
+
                 & .footer-menu {
                     display: flex;
+                    height: 4rem;
                     justify-content: space-between;
                     align-items: center;
-                    width: 25rem;
-                    height: 4rem;
-                    margin-top: 23rem;
+                    padding: 0 1rem;
                     border-radius: 0 0 0 40px;
-                    padding: 0 1.5rem;
 
                     & .prix {
                         font-size: 1.35rem;
@@ -131,9 +135,8 @@ $vert-bleu-blanc: rgb(162, 255, 224);
                         
                     }
                 }
-                
             }
-            
+
             & .first-menu {
                 background: linear-gradient(-35deg, $vert-jaune-op_0_8 40%, $vert-jaune-blanc-op_0_8);
                 
@@ -171,6 +174,7 @@ $vert-bleu-blanc: rgb(162, 255, 224);
             }
         }
     }
+
 }
 
 .bg-body-2 {
@@ -179,7 +183,7 @@ $vert-bleu-blanc: rgb(162, 255, 224);
     height: 10rem;
     max-width: 500rem;
     width: 100%;
-    background: $bleu-pastel;
+    background: rgb(230, 255, 230);
 
     & .info-livraison-paiement {
         width: 85%;
@@ -272,20 +276,19 @@ $vert-bleu-blanc: rgb(162, 255, 224);
 // ========================================== BREAK-POINT ==========================================
 
 
-
-
-@media only screen and (max-width: 1375px) {
+@media only screen and (max-width: 1350px) {
     .bg-body-1 {
-
+    
         & .global-menu-titre {
     
             & .global-menu {
-                overflow-y: hidden;
+                max-width: 799px;
             }
         }
     }
-    
 }
+
+
 
 
 @media only screen and (max-width: 1050px) {
@@ -318,10 +321,7 @@ $vert-bleu-blanc: rgb(162, 255, 224);
                 }
             }
         }
-    }
-    
-    
-    
+    }   
 
     // Réajustement taille restons en contact
     .bg-body-4 {
@@ -396,8 +396,37 @@ $vert-bleu-blanc: rgb(162, 255, 224);
         }
     }
 }
+
+@media only screen and (max-width: 450px) {
+    .bg-body-1 {
+    
+        & .global-menu-titre {
+            
+            & .titre-global-menu {
+                margin: 2rem;
+            }
+
+            & .global-menu {
+
+                & .menu {
+                    width: 20rem;
+                    height: 27.5rem;
+                    margin: .75rem .5rem;
+    
+                    & .body-menu {
+                        height: 19.9rem;
+                        padding: .5rem;
+                    }
+                }
+    
+            }
+        }
+    }
+    
+
+}
+
 @media only screen and (max-width: 400px) {
-    // Réajustement n°2 taille nav
     .bg-body-4 {
 
         & form {
@@ -413,13 +442,11 @@ $vert-bleu-blanc: rgb(162, 255, 224);
     }
 }
 @media only screen and (max-width: 385px) {
-    // Réajustement n°2 taille nav
     .bg-body-4 {
         height: 26rem;
     }
 }
 @media only screen and (max-width: 360px) {
-    // Réajustement n°2 taille nav
     .bg-body-4 {
 
         & form {
@@ -430,15 +457,43 @@ $vert-bleu-blanc: rgb(162, 255, 224);
         }
     }
 }
+
+@media only screen and (max-width: 340px) {
+    .bg-body-1 {
+    
+        & .global-menu-titre {
+            
+            & .titre-global-menu {
+                margin: 1rem;
+            }
+
+            & .global-menu {
+
+                & .menu {
+                    width: 16rem;
+                    height: 24rem;
+                    margin: .75rem .5rem;
+    
+                    & .body-menu {
+                        height: 16.4rem;
+                        padding: .5rem;
+                    }
+                }
+    
+            }
+        }
+    }
+    
+
+}
+
 @media only screen and (max-width: 300px) {
-    // Réajustement n°2 taille nav
     .bg-body-4 {
         height: 28rem;
         padding: 0;
     }
 }
 @media only screen and (max-width: 280px) {
-    // Réajustement n°2 taille nav
     .bg-body-2 {
         
         & .info-livraison-paiement {
@@ -452,10 +507,98 @@ $vert-bleu-blanc: rgb(162, 255, 224);
         }
     }
 }
+
+@media only screen and (max-width: 275px) {
+    .bg-body-1 {
+    
+        & .global-menu-titre {
+            
+            & .titre-global-menu {
+                margin: .75rem;
+            }
+
+            & .global-menu {
+
+                & .menu {
+                    width: 14rem;
+                    height: 20rem;
+                    margin: .75rem .5rem;
+    
+                    & .body-menu {
+                        height: 12.4rem;
+                        padding: .5rem;
+                    }
+                }
+    
+            }
+        }
+    }
+    
+
+}
+
 @media only screen and (max-width: 262px) {
-    // Réajustement n°2 taille nav
     .bg-body-4 {
         height: 30rem;
         padding: 0;
     }
+}
+
+@media only screen and (max-width: 255px) {
+    .bg-body-1 {
+    
+        & .global-menu-titre {
+            
+            & .titre-global-menu {
+                margin: .75rem;
+            }
+
+            & .global-menu {
+
+                & .menu {
+                    width: 12rem;
+                    height: 17rem;
+                    margin: .75rem .5rem;
+    
+                    & .body-menu {
+                        height: 9.4rem;
+                        padding: .5rem;
+                    }
+
+                    & .footer-menu {
+    
+                        & .prix {
+                            font-size: 1.25rem;
+                            font-weight: bold;
+                        }
+                        
+                        & a {
+                            font-size: 1.25rem;
+                            font-weight: bold;
+                            color: $noir;
+                            transition: .5s;
+    
+                            &:hover {
+                                transform: scale(1.1);
+                            }
+                        }
+    
+                        & .buton-choisir {
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            width: 5rem;
+                            height: 2.5rem;
+                            border: solid 2px $noir;
+                            border-radius: 15px;
+                            
+                        }
+                    }
+                }
+    
+            }
+        }
+    }
+    
+
 }
