--- a/css/index/index_main.css
+++ b/css/index/index_main.css
@@ -140,10 +140,35 @@
 
 .bg-body-3 {
   display: flex;
-  height: 35rem;
-  max-width: 500rem;
-  width: 100%;
+  padding: 4rem 1rem;
   background: #fff;
+  justify-content: center;
+  align-items: center;
+}
+.bg-body-3 .img-txt-description {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  max-width: 84rem;
+}
+.bg-body-3 .img-txt-description .img-description img {
+  width: 35rem;
+  margin: 1rem 1.5rem 1rem 1rem;
+  border-radius: 20px;
+}
+.bg-body-3 .img-txt-description .txt-description {
+  margin-left: 1.5rem;
+  margin-right: 1rem;
+}
+.bg-body-3 .img-txt-description .txt-description h3 {
+  margin-bottom: 2.5rem;
+  font-size: 2.3rem;
+  color: rgb(0, 77, 6);
+}
+.bg-body-3 .img-txt-description .txt-description p {
+  margin-top: 2rem;
+  font-size: 1.08rem;
 }
 
 .bg-body-4 {
@@ -270,9 +295,31 @@
     background: #000;
   }
 }
+@media only screen and (max-width: 900px) {
+  .bg-body-3 .img-txt-description .img-description img {
+    width: 30rem;
+  }
+}
+@media only screen and (max-width: 820px) {
+  .bg-body-3 .img-txt-description .img-description img {
+    width: 25rem;
+  }
+}
 @media only screen and (max-width: 800px) {
   .bg-body-2 .info-livraison-paiement .item-info-livraison-paiement img {
     max-width: 4rem;
+  }
+}
+@media only screen and (max-width: 750px) {
+  .bg-body-3 .img-txt-description {
+    flex-direction: column;
+    max-width: 27rem;
+  }
+  .bg-body-3 .img-txt-description .img-description img {
+    width: 25rem;
+  }
+  .bg-body-3 .img-txt-description .txt-description {
+    margin: 0 1rem;
   }
 }
 @media only screen and (max-width: 450px) {
@@ -287,6 +334,24 @@
   .bg-body-1 .global-menu-titre .global-menu .menu .body-menu {
     height: 19.9rem;
     padding: 0.5rem;
+  }
+  .bg-body-3 {
+    padding: 3rem 0;
+  }
+  .bg-body-3 .img-txt-description {
+    max-width: 22rem;
+  }
+  .bg-body-3 .img-txt-description .img-description img {
+    width: 20rem;
+  }
+  .bg-body-3 .img-txt-description .txt-description {
+    margin: 0 1rem;
+  }
+  .bg-body-3 .img-txt-description .txt-description h3 {
+    font-size: 2rem;
+  }
+  .bg-body-3 .img-txt-description .txt-description p {
+    font-size: 1rem;
   }
 }
 @media only screen and (max-width: 400px) {
@@ -306,6 +371,25 @@
   }
 }
 @media only screen and (max-width: 360px) {
+  .bg-body-3 {
+    padding-top: 2rem;
+    padding-bottom: 3rem;
+  }
+  .bg-body-3 .img-txt-description {
+    max-width: 18rem;
+  }
+  .bg-body-3 .img-txt-description .img-description img {
+    width: 16rem;
+  }
+  .bg-body-3 .img-txt-description .txt-description {
+    margin: 0 1rem;
+  }
+  .bg-body-3 .img-txt-description .txt-description h3 {
+    font-size: 1.8rem;
+  }
+  .bg-body-3 .img-txt-description .txt-description p {
+    font-size: 0.9rem;
+  }
   .bg-body-4 form {
     margin-top: 2rem;
   }
@@ -328,6 +412,12 @@
   }
 }
 @media only screen and (max-width: 300px) {
+  .bg-body-3 .img-txt-description {
+    max-width: 16rem;
+  }
+  .bg-body-3 .img-txt-description .img-description img {
+    width: 14rem;
+  }
   .bg-body-4 {
     height: 28rem;
     padding: 0;
@@ -350,6 +440,14 @@
   .bg-body-1 .global-menu-titre .global-menu .menu .body-menu {
     height: 12.4rem;
     padding: 0.5rem;
+  }
+}
+@media only screen and (max-width: 265px) {
+  .bg-body-3 .img-txt-description {
+    max-width: 14rem;
+  }
+  .bg-body-3 .img-txt-description .img-description img {
+    width: 12rem;
   }
 }
 @media only screen and (max-width: 262px) {
@@ -392,5 +490,11 @@
     height: 2.5rem;
     border: solid 2px #000;
     border-radius: 15px;
+  }
+  .bg-body-3 .img-txt-description {
+    max-width: 13rem;
+  }
+  .bg-body-3 .img-txt-description .img-description img {
+    width: 11rem;
   }
 }/*# sourceMappingURL=index_main.css.map */
