--- a/css/index/index_main.scss
+++ b/css/index/index_main.scss
@@ -209,12 +209,44 @@ $vert-bleu-blanc: rgb(162, 255, 224);
     }
 }
 .bg-body-3 {
-    // rien non plus
+    // image et txt descrition
     display: flex;
-    height: 35rem;
-    max-width: 500rem;
-    width: 100%;
+    padding: 4rem 1rem;
     background: $blanc;
+    justify-content: center;
+    align-items: center;
+    
+    & .img-txt-description {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        max-width: 84rem;
+
+        & .img-description {
+
+            & img {
+                width: 35rem;
+                margin: 1rem 1.5rem 1rem 1rem;
+                border-radius: 20px;
+            }
+        }
+        & .txt-description {
+            margin-left: 1.5rem;
+            margin-right: 1rem;
+
+            & h3 {
+                margin-bottom: 2.5rem;
+                font-size: 2.3rem;
+                color: rgb(0, 77, 6);
+            }
+
+            & p {
+                margin-top: 2rem;
+                font-size: 1.08rem;
+            }
+        }
+    }
 }
 
 .bg-body-4 {
@@ -381,6 +413,36 @@ $vert-bleu-blanc: rgb(162, 255, 224);
     }
 }
 
+@media only screen and (max-width: 900px) {
+    .bg-body-3 {
+        
+        & .img-txt-description {
+    
+            & .img-description {
+    
+                & img {
+                    width: 30rem;
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 820px) {
+    .bg-body-3 {
+        
+        & .img-txt-description {
+    
+            & .img-description {
+    
+                & img {
+                    width: 25rem;
+                }
+            }
+        }
+    }
+}
+
 @media only screen and (max-width: 800px) {
     // Réajustement taille bandeau info paiement livraison
     .bg-body-2 {
@@ -392,6 +454,27 @@ $vert-bleu-blanc: rgb(162, 255, 224);
                 & img {
                     max-width: 4rem;
                 }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 750px) {
+    .bg-body-3 {
+        
+        & .img-txt-description {
+            flex-direction: column;
+            max-width: 27rem;
+    
+            & .img-description {
+    
+                & img {
+                    width: 25rem;
+                }
+            }
+
+            & .txt-description {
+                margin: 0 1rem;;
             }
         }
     }
@@ -422,7 +505,33 @@ $vert-bleu-blanc: rgb(162, 255, 224);
             }
         }
     }
+
+
+    .bg-body-3 {
+        padding: 3rem 0;
+        & .img-txt-description {
+            max-width: 22rem;
     
+            & .img-description {
+    
+                & img {
+                    width: 20rem;
+                }
+            }
+
+            & .txt-description {
+                margin: 0 1rem;
+
+                & h3 {
+                    font-size: 2rem;
+                }
+    
+                & p {
+                    font-size: 1rem;
+                }
+            }
+        }
+    }
 
 }
 
@@ -447,6 +556,33 @@ $vert-bleu-blanc: rgb(162, 255, 224);
     }
 }
 @media only screen and (max-width: 360px) {
+    .bg-body-3 {
+        padding-top: 2rem;
+        padding-bottom: 3rem;
+        & .img-txt-description {
+            max-width: 18rem;
+    
+            & .img-description {
+    
+                & img {
+                    width: 16rem;
+                }
+            }
+
+            & .txt-description {
+                margin: 0 1rem;
+
+                & h3 {
+                    font-size: 1.8rem;
+                }
+    
+                & p {
+                    font-size: .9rem;
+                }
+            }
+        }
+    }
+
     .bg-body-4 {
 
         & form {
@@ -488,6 +624,20 @@ $vert-bleu-blanc: rgb(162, 255, 224);
 }
 
 @media only screen and (max-width: 300px) {
+    .bg-body-3 {
+        
+        & .img-txt-description {
+            max-width: 16rem;
+
+            & .img-description {
+    
+                & img {
+                    width: 14rem;
+                }
+            }
+        }
+    }
+    
     .bg-body-4 {
         height: 28rem;
         padding: 0;
@@ -535,6 +685,22 @@ $vert-bleu-blanc: rgb(162, 255, 224);
     }
     
 
+}
+
+@media only screen and (max-width: 265px) {
+    .bg-body-3 {
+        
+        & .img-txt-description {
+            max-width: 14rem;
+
+            & .img-description {
+    
+                & img {
+                    width: 12rem;
+                }
+            }
+        }
+    }
 }
 
 @media only screen and (max-width: 262px) {
@@ -600,5 +766,17 @@ $vert-bleu-blanc: rgb(162, 255, 224);
         }
     }
     
+    .bg-body-3 {
+        
+        & .img-txt-description {
+            max-width: 13rem;
 
+            & .img-description {
+    
+                & img {
+                    width: 11rem;
+                }
+            }
+        }
+    }
 }
