--- a/css/index/index_main.scss
+++ b/css/index/index_main.scss
@@ -635,6 +635,13 @@ $vert-bleu-blanc: rgb(162, 255, 224);
                     width: 14rem;
                 }
             }
+
+            & .txt-description {
+    
+                & h3 {
+                    max-width: 10rem;
+                }
+            }
         }
     }
     
