--- a/css/index/index_main.css
+++ b/css/index/index_main.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background: #fff;
 }
 .bg-body-1 .global-menu-titre {
   display: flex;
@@ -16,9 +17,11 @@
 .bg-body-1 .global-menu-titre .titre-global-menu h2 {
   margin-bottom: 1rem;
   font-size: 2.25rem;
+  color: #504852;
 }
 .bg-body-1 .global-menu-titre .titre-global-menu h3 {
   margin-bottom: 1rem;
+  color: #504852;
 }
 .bg-body-1 .global-menu-titre .global-menu {
   display: flex;
@@ -43,10 +46,11 @@
 }
 .bg-body-1 .global-menu-titre .global-menu .menu .titre-menu h4 {
   font-size: 1.5rem;
+  color: #504852;
 }
 .bg-body-1 .global-menu-titre .global-menu .menu .titre-menu h5 {
   font-size: 0.8rem;
-  color: rgba(0, 0, 0, 0.75);
+  color: #504852;
 }
 .bg-body-1 .global-menu-titre .global-menu .menu .body-menu {
   height: 22.3rem;
@@ -63,12 +67,13 @@
 .bg-body-1 .global-menu-titre .global-menu .menu .footer-menu .prix {
   font-size: 1.35rem;
   font-weight: bold;
+  color: #504852;
 }
 .bg-body-1 .global-menu-titre .global-menu .menu .footer-menu a {
   font-size: 1.35rem;
   font-weight: bold;
-  color: #000;
   transition: 0.5s;
+  color: #504852;
 }
 .bg-body-1 .global-menu-titre .global-menu .menu .footer-menu a:hover {
   transform: scale(1.1);
@@ -81,33 +86,43 @@
   height: 2.5rem;
   border: solid 2px #000;
   border-radius: 15px;
+  color: #504852;
 }
 .bg-body-1 .global-menu-titre .global-menu .first-menu {
-  background: linear-gradient(-35deg, rgba(184, 255, 69, 0.8) 40%, rgba(225, 255, 177, 0.8));
+  background-image: url("../../img/CaptureSoShape.PNG");
+  background-position: center;
 }
 .bg-body-1 .global-menu-titre .global-menu .first-menu .footer-menu {
-  background: linear-gradient(45deg, rgb(168, 255, 27), rgb(225, 255, 177) 65%);
+  -webkit-backdrop-filter: blur(6px);
+          backdrop-filter: blur(6px);
 }
 .bg-body-1 .global-menu-titre .global-menu .first-menu .footer-menu .buton-choisir {
-  background: rgb(168, 255, 27);
+  -webkit-backdrop-filter: blur(50px);
+          backdrop-filter: blur(50px);
 }
 .bg-body-1 .global-menu-titre .global-menu .second-menu {
-  background: linear-gradient(-35deg, rgba(69, 255, 94, 0.8) 40%, rgba(177, 255, 187, 0.8));
+  background-image: url("../../img/CaptureSoShape.PNG");
+  background-position: center;
 }
 .bg-body-1 .global-menu-titre .global-menu .second-menu .footer-menu {
-  background: linear-gradient(45deg, rgb(28, 255, 58), rgb(177, 255, 187) 65%);
+  -webkit-backdrop-filter: blur(6px);
+          backdrop-filter: blur(6px);
 }
 .bg-body-1 .global-menu-titre .global-menu .second-menu .footer-menu .buton-choisir {
-  background: rgb(28, 255, 58);
+  -webkit-backdrop-filter: blur(50px);
+          backdrop-filter: blur(50px);
 }
 .bg-body-1 .global-menu-titre .global-menu .third-menu {
-  background: linear-gradient(-35deg, rgba(69, 255, 193, 0.8) 40%, rgba(176, 255, 229, 0.8));
+  background-image: url("../../img/CaptureSoShape.PNG");
+  background-position: center;
 }
 .bg-body-1 .global-menu-titre .global-menu .third-menu .footer-menu {
-  background: linear-gradient(45deg, rgb(30, 255, 180), rgb(162, 255, 224) 65%);
+  -webkit-backdrop-filter: blur(6px);
+          backdrop-filter: blur(6px);
 }
 .bg-body-1 .global-menu-titre .global-menu .third-menu .footer-menu .buton-choisir {
-  background: rgb(30, 255, 180);
+  -webkit-backdrop-filter: blur(50px);
+          backdrop-filter: blur(50px);
 }
 
 .bg-body-2 {
@@ -131,6 +146,7 @@
   max-width: 215px;
   width: 100%;
   align-items: center;
+  color: #504852;
 }
 .bg-body-2 .info-livraison-paiement .item-info-livraison-paiement img {
   max-width: 5rem;
@@ -164,11 +180,12 @@
 .bg-body-3 .img-txt-description .txt-description h3 {
   margin-bottom: 2.5rem;
   font-size: 2.3rem;
-  color: rgb(0, 77, 6);
+  color: rgb(0, 94, 15);
 }
 .bg-body-3 .img-txt-description .txt-description p {
   margin-top: 2rem;
   font-size: 1.08rem;
+  color: #504852;
 }
 
 .bg-body-4 {
@@ -185,9 +202,12 @@
   font-size: 1.6rem;
   font-weight: bolder;
   margin-bottom: 4rem;
+  color: #504852;
+  text-transform: uppercase;
 }
 .bg-body-4 .text-mail {
   margin: 0 2.5rem;
+  color: #504852;
 }
 .bg-body-4 form {
   margin-top: 3rem;
@@ -197,6 +217,7 @@
   border: solid 2px #000;
   border-radius: 10px;
   margin: 0 0.75rem;
+  color: #504852;
 }
 .bg-body-4 form input[type=mail] {
   width: 15rem;
