--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ html {
 }
 
 body {
-  font-family: "Dejavu Sans";
+  font-family: "Quicksand", sans-serif;
 }
 body::-webkit-scrollbar {
   width: 10px; /* width of the entire scrollbar */
@@ -78,9 +78,11 @@ body::-webkit-scrollbar-thumb:active {
 .header .title h1 {
   margin-bottom: 1rem;
   text-align: center;
+  color: #484349;
 }
 .header .title h2 {
   text-align: center;
+  color: #484349;
 }
 .header .header-buton {
   display: none;
@@ -118,7 +120,7 @@ body::-webkit-scrollbar-thumb:active {
 }
 .header .nav .nav-list .nav-item a {
   position: relative;
-  color: #000;
+  color: #484349;
 }
 .header .nav .nav-list .nav-item a:after {
   content: "";
@@ -151,6 +153,7 @@ body::-webkit-scrollbar-thumb:active {
 }
 .header .nav .nav-list:nth-child(3) p {
   display: none;
+  color: #484349;
 }
 
 .footer {
@@ -175,7 +178,7 @@ body::-webkit-scrollbar-thumb:active {
 }
 .footer .footer-content h3 {
   margin-bottom: 1.5rem;
-  color: rgb(7, 204, 33);
+  color: rgb(0, 94, 15);
 }
 .footer .footer-content .first-footer-content div {
   margin: 5rem 0;
