add item choise compo menu

--- a/css/menu/menu_simple/menu_simple.css
+++ b/css/menu/menu_simple/menu_simple.css
@@ -1,3 +1,53 @@
+.bg-body-1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.bg-body-1 .compo-menu {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  max-width: 1200px;
+  width: 100%;
+  margin: 1.5rem;
+}
+.bg-body-1 .compo-menu .compo-item {
+  background: #e7e7e7;
+  justify-self: center;
+  align-items: center;
+  margin: 1rem;
+}
+.bg-body-1 .compo-menu .compo-item .body-compo-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 15rem;
+  margin: 0.5rem 0;
+  padding: 0.75rem;
+  text-align: center;
+}
+.bg-body-1 .compo-menu .compo-item .footer-compo-item {
+  display: flex;
+  background: #ceceff;
+  width: 15rem;
+  padding: 0.25rem;
+  align-items: center;
+  justify-content: space-around;
+  text-align: center;
+}
+.bg-body-1 .compo-menu .compo-item .footer-compo-item img {
+  max-width: 1.5rem;
+  width: 100%;
+  border-radius: 100%;
+}
+.bg-body-1 .compo-menu .compo-item .footer-compo-item img:hover {
+  transform: scale(1.1);
+}
+.bg-body-1 .compo-menu .compo-item .footer-compo-item img:active {
+  background: rgb(7, 207, 0);
+}
+
 .bg-body-4 {
   display: flex;
   flex-direction: column;
