--- a/css/menu/menu_simple/menu_simple.css
+++ b/css/menu/menu_simple/menu_simple.css
@@ -27,6 +27,10 @@
   padding: 0.75rem;
   text-align: center;
 }
+.bg-body-1 .compo-menu .compo-item .body-compo-item img {
+  max-width: 8rem;
+  width: 100%;
+}
 .bg-body-1 .compo-menu .compo-item .footer-compo-item {
   display: flex;
   width: 15rem;
