--- a/css/menu/menu_simple/menu_simple.scss
+++ b/css/menu/menu_simple/menu_simple.scss
@@ -51,6 +51,11 @@ $border-top-footer-compo-menu: rgb(243, 243, 243);;
                 margin: .5rem 0;
                 padding: .75rem;
                 text-align: center;
+
+                & img {
+                    max-width: 8rem;
+                    width: 100%;
+                }
             }
 
             & .footer-compo-item {
