--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,7 @@ body::-webkit-scrollbar-thumb:active {
   color: #484349;
 }
 .header .nav {
-  display: flex;
+  display: none;
   width: 100%;
   margin-left: auto;
   margin-right: auto;
@@ -155,6 +155,67 @@ body::-webkit-scrollbar-thumb:active {
   min-width: 27%;
 }
 .header .nav .nav-list:nth-child(3) p {
+  display: none;
+  color: #484349;
+}
+.header .navR {
+  display: flex;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: space-evenly;
+  align-items: center;
+  position: relative;
+}
+.header .navR .nav-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0rem 2rem;
+}
+.header .navR .nav-list img {
+  max-width: 1.8rem;
+  width: 100%;
+}
+.header .navR .nav-list .nav-item {
+  margin: 1rem 1.5rem;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+.header .navR .nav-list .nav-item a {
+  position: relative;
+  color: #484349;
+}
+.header .navR .nav-list .nav-item a:after {
+  content: "";
+  bottom: -3px;
+  width: 0;
+  right: 0;
+  position: absolute;
+  height: 2px;
+  background: rgb(65, 199, 83);
+  transition: 0.4s width;
+  z-index: 5;
+}
+.header .navR .nav-list .nav-item a:hover:after {
+  width: 100%;
+  left: 0;
+}
+.header .navR .nav-list .nav-item a:active:after {
+  width: 100%;
+  left: 0;
+  transform: scale(1.1);
+  height: 3px;
+  transition: 0.08s;
+}
+.header .navR .nav-list:nth-child(2) {
+  font-size: 1.5rem;
+  font-weight: bolder;
+}
+.header .navR .nav-list:nth-child(1), .header .navR .nav-list:nth-child(3) {
+  min-width: 27%;
+}
+.header .navR .nav-list:nth-child(3) p {
   display: none;
   color: #484349;
 }
@@ -241,6 +302,9 @@ body::-webkit-scrollbar-thumb:active {
     left: 14rem;
     z-index: 10;
     transition: 2s;
+  }
+  .header .navR {
+    display: none;
   }
   .header .nav {
     display: block;
