--- a/css/main.scss
+++ b/css/main.scss
@@ -183,6 +183,97 @@ body {
     }
 
     & .nav {
+        display: none;
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        justify-content: space-evenly;
+        align-items: center;
+        position: relative;
+    
+        // &:after {
+        //     content: "";
+        //     bottom: -3px;
+        //     width: 50%;
+        //     left: 25%;
+        //     position: absolute;
+        //     height: 2px;
+        //     background: rgb(65, 199, 83);
+        //     z-index: 5;
+        // }
+    
+        & .nav-list {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 0rem 2rem;
+        
+            & img {
+                max-width: 1.8rem;
+                width: 100%;
+            }            
+    
+            & .nav-item {
+                margin: 1rem 1.5rem;
+                text-transform: uppercase;
+                font-weight: 600;
+                
+                & a {
+                    position: relative;
+                    color: $texte;
+                    
+                    &:after {
+                        content: "";
+                        bottom: -3px;
+                        width: 0;
+                        right: 0;
+                        position: absolute;
+                        height: 2px;
+                        background: rgb(65, 199, 83);
+                        transition: .4s width;
+                        z-index: 5;
+                    }
+            
+                    &:hover {
+                        &:after {
+                            width: 100%;
+                            left: 0;
+                        }
+                    }
+    
+                    &:active {
+    
+                        &:after {
+                            width: 100%;
+                            left: 0;
+                            transform: scale(1.1);
+                            height: 3px;
+                            transition: .08s;
+                        }
+                    }
+                }
+            }
+        }
+    
+        & .nav-list:nth-child(2) {
+            font-size: 1.5rem;
+            font-weight: bolder;
+        }
+        
+        & .nav-list:nth-child(1), .nav-list:nth-child(3) {
+            min-width: 27%;
+        }
+        
+        & .nav-list:nth-child(3) {
+            
+            & p {
+                display: none;
+                color: $texte;
+            }
+        }
+    }
+
+    & .navR {
         display: flex;
         width: 100%;
         margin-left: auto;
@@ -408,6 +499,9 @@ body {
             }
         }
 
+        & .navR {
+            display: none;
+        }
         & .nav {
             display: block;
             flex-direction: column;
