--- a/css/cart/cart.css
+++ b/css/cart/cart.css
@@ -1,1 +1,9 @@
-/*# sourceMappingURL=cart.css.map */
+.header {
+  height: 12rem;
+}
+.header .title {
+  margin: 2rem 1.5rem 0 1.5rem !important;
+  text-transform: uppercase !important;
+  font-size: 2rem !important;
+  font-weight: 300 !important;
+}/*# sourceMappingURL=cart.css.map */
