--- a/css/main.scss
+++ b/css/main.scss
@@ -346,6 +346,15 @@ body {
                             }
                         }
                     }
+
+                    & .error {
+                    
+                        & .error-message {
+                            text-align: center;
+                            color: #ff0000;
+                            font-weight: 600;
+                        }
+                    }
                 }
                 & .pop-up-connexion-inscription-footer {
                     margin-top: 1rem;
