--- a/css/menu/menu_simple/menu_simple.css
+++ b/css/menu/menu_simple/menu_simple.css
@@ -17,6 +17,7 @@
   align-items: center;
   box-shadow: 0px 0px 10px rgb(228, 228, 228);
   margin: 1rem;
+  border-radius: 15px;
 }
 .bg-body-1 .compo-menu .compo-item .body-compo-item {
   display: flex;
@@ -30,6 +31,7 @@
 .bg-body-1 .compo-menu .compo-item .body-compo-item img {
   max-width: 8rem;
   width: 100%;
+  border-radius: 8px;
 }
 .bg-body-1 .compo-menu .compo-item .footer-compo-item {
   display: flex;
