--- a/css/menu/menu_simple/menu_simple.scss
+++ b/css/menu/menu_simple/menu_simple.scss
@@ -42,6 +42,7 @@ $border-top-footer-compo-menu: rgb(243, 243, 243);;
             align-items: center;
             box-shadow: 0px 0px 10px $shadow-compo-item;
             margin: 1rem;
+            border-radius: 15px;
 
             & .body-compo-item {
                 display: flex;
@@ -55,6 +56,7 @@ $border-top-footer-compo-menu: rgb(243, 243, 243);;
                 & img {
                     max-width: 8rem;
                     width: 100%;
+                    border-radius: 8px;
                 }
             }
 
