--- a/css/index/index_main.scss
+++ b/css/index/index_main.scss
@@ -339,6 +339,10 @@ $blur-buton-menu: 50px;
         color: $texte;
     }
 
+    & .newslettre-info {
+        font-size: .8rem;
+    }
+
     & form {
         margin-top: 3rem;
         
