--- a/css/legal/legal.scss
+++ b/css/legal/legal.scss
@@ -24,147 +24,74 @@ $border-top-footer-compo-menu: rgb(243, 243, 243);;
 
 .bg-body-1 {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    padding: 1rem 1rem 1rem 3rem;
 
-    & .compo-menu {
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: center;
-        max-width: 1200px;
-        width: 100%;
-        margin: 1.5rem;
-        
-        & .compo-item {
-            // background: #e7e7e7;
-            justify-self: center;
-            align-items: center;
-            box-shadow: 0px 0px 10px $shadow-compo-item;
-            margin: 1rem;
-            border-radius: 15px;
+    & h2 {
+        margin-bottom: 2rem;
+        margin-left: -1rem;
+    }
 
-            & .body-compo-item {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                width: 15rem;
-                margin: .5rem 0;
-                padding: .75rem;
-                text-align: center;
+    & .article {
+        margin-bottom: 1rem;
 
-                & img {
-                    max-width: 8rem;
-                    width: 100%;
-                    border-radius: 8px;
-                }
-            }
-
-            & .footer-compo-item {
-                display: flex;
-                width: 15rem;
-                padding: .25rem;
-                align-items: center;
-                justify-content: space-around;
-                text-align: center;
-                border-top: solid 1px $border-top-footer-compo-menu;
-
-                & .ajouter-button {
-                    margin-bottom: 1.5rem;*
-
-                    &:hover {
-                        & img {
-                            transform: scale(1.1);
-                        }
-                    }
-                    
-                    &:active {
-
-                        & img:nth-child(1) {
-                            visibility: hidden;
-                        }
-                        
-                        & img:nth-child(2) {
-                            visibility: visible;
-                        }
-                    }
-
-                    & img {
-                        max-width: 1.5rem;
-                        width: 100%;
-                        border-radius: 100%;
-                        position: absolute;
-                    }
-
-                    & img:nth-child(2) {
-                        visibility: hidden;
-                    }
-
-                }
-            }
+        & .titre {
+            font-size: 1.1rem;
+            margin-left: -1rem;
         }
     }
 }
 
-
-.bg-body-4 {
-    // Restons en contact
+.bg-body-2 {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
-    height: 25rem;
-    max-width: 500rem;
-    width: 100%;
+    padding: 1rem 1rem 1rem 3rem;
     background: $vert-base;
 
-    & .title-mail {
-        font-size: 1.6rem;
-        font-weight: bolder;
-        margin-bottom: 4rem;
-        color: $texte;
-        text-transform: uppercase;
+    & h2 {
+        margin-bottom: 2rem;
+        margin-left: -1rem;
     }
 
-    & .text-mail {
-        margin: 0 2.5rem;
-        color: $texte;
-    }
+    & .article {
+        margin-bottom: 1rem;
 
-    & .newslettre-info {
-        font-size: .8rem;
-    }
-    
-    & form {
-        margin-top: 3rem;
-        
-        & input {
-            height: 3rem;
-            border: solid 2px $noir;
-            border-radius: 10px;
-            margin: 0 0.75rem;
-            color: $texte;
-        }
-        & input[type=mail] {
-            width: 15rem;
-            padding: 0 1rem;
-            color: $noir;
-            background: $vert-base;
-        }
-        
-        & input[type=submit] {
-            width: 5rem;
-            color: #000;
-            background: $vert-base;
-            transition: .4s;
-
-            &:hover {
-                color: $vert-base;
-                background: $noir;
-            }
+        & .titre {
+            font-size: 1.1rem;
+            margin-left: -1rem;
         }
     }
 }
+
+.bg-body-3 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 1rem 1rem 1rem 3rem;
+
+    & h2 {
+        margin-bottom: 2rem;
+        margin-left: -1rem;
+    }
+
+    & .article {
+        margin-bottom: 1rem;
+
+        & .titre {
+            font-size: 1.1rem;
+            margin-left: -1rem;
+        }
+    }
+}
+
+.bg-body-4 {
+    display: flex;
+    height: 1rem;
+    background: $vert-base;
+}
+
 
 
 // ========================================== BREAK-POINT ==========================================
